# MCPTune

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: architectural_discussion.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/mcptune/: __init__.py  mcptune.py
src/mcptune/adapters/: base.py  fastmcp.py
src/mcptune/core/: tool.py
src/mcptune/dataset/: io.py
src/mcptune/discovery/: base.py  models.py
src/mcptune/sampling/: base.py  primitive.py
src/mcptune/schema/: __init__.py  dataset.py  tools.py
src/mcptune/utils/: __init__.py  dataset_builder.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/integration/: test_execution_loop.py  test_fastmcp_adapter.py  test_mcptune_pipeline.py  test_normalization.py  test_pipeline.py
tests/servers/: mock_fastmcp_server_01.py  mock_server.py
tests/unit/: test_argument_builder.py  test_dataset_io.py  test_dataset_row.py  test_mcp_request.py  test_request_builder.py  test_sampler.py
